[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['og_marl*']

[tool.setuptools.dynamic]
version = {attr = "og_marl.__version__"}
dependencies = {file = ["requirements.txt"]}

[project]
name = "og-marl"
readme = "README.md"
description = "Off-the-Grid MARL: Datasets and Baselines for offline MARL Research."
authors = [
    {name = "Claude Formanek"},
  ]
dynamic = ["version", "dependencies", "optional-dependencies"]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/instadeepai/og-marl"
"Bug Tracker" = "https://github.com/instadeepai/og-marl/issues"